--- a/src/app/arqueo-caja/arqueo-caja-list/arqueo-caja-list.component.html
+++ b/src/app/arqueo-caja/arqueo-caja-list/arqueo-caja-list.component.html
@@ -1,89 +1,90 @@
 <ng-template #deleteTemplate>
-    <app-delete-template [modalTitle]="modalDeleteTitle" [modalMessage]="modalDeleteMessage" (delete)="deleteArqueo()"
-        (close)="closeModal()">
-    </app-delete-template>
+  <app-delete-template [modalTitle]="modalDeleteTitle" [modalMessage]="modalDeleteMessage" (delete)="deleteArqueo()"
+    (close)="closeModal()">
+  </app-delete-template>
 </ng-template>
 
 <ng-template #errorTemplate>
-    <app-error-template [errorTitle]="modalErrorTittle" [errorMessage]="modalErrorMessage" (close)="closeModal()">
-    </app-error-template>
+  <app-error-template [errorTitle]="modalErrorTittle" [errorMessage]="modalErrorMessage" (close)="closeModal()">
+  </app-error-template>
 </ng-template>
 
 <div class="row pl-0 pr-0 ml-0 mr-0">
-    <div class="col-md-8 col-lg-8 col-sm-8 pr-0 pl-0 mr-0 pr-0 customTitleBar">
-        <div class="row pr-0 ml-0 mr-0 pageTitle">
-            <header class="major">
-                <h5 class="customTitle">{{ pageTitle }}</h5>
-            </header>
-            <a class="customFloatedButton"
-                [routerLink]="['/sales/cash-counts', { outlets: { edit: ['newCashCount'] } }]"
-                mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.btn-primary-custom]="true" [class.customButton]="true" mdbRippleRadius
-                *ngIf='enableNew'> + Nuevo Arqueo</a>
-        </div>
-        <div class="row pl-0 pr-0 ml-0 mr-0 pt-0 heightThree">
-            <div class="col-md-12 col-lg-12 col-sm-12 pl-5 pr-5 pt-4 pb-2 mt-2 text-center">
-                <div class="row">
-                    <table class="table table-bordered table-hover customTable" mdbTable #tableEl="mdbTable">
-                        <thead class="primary-color customTableText">
-                            <tr>
-                                <th>Hora Apertura</th>
-                                <th>Hora Cierre</th>
-                                <th>Caja</th>
-                                <th>Estimado</th>
-                                <th>Real</th>
-                                <th>Diferencia</th>
-                                <th *ngIf='enableActionButtons'>Acciones</th>
-                            </tr>
-                        </thead>
-                        <tbody class="table-wrapper" *ngIf='filteredArqueos && filteredArqueos.length'>
-                            <tr *ngFor='let arqueo of filteredArqueos; let i = index'>
-                                <td
-                                    *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>
-                                    {{ arqueo.createdAt | date:'dd/MM/yy HH:mm' }}</td>
-                                <td
-                                    *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>
-                                    {{ arqueo.closedAt | date:'dd/MM/yy HH:mm' }}</td>
-                                <td
-                                    *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>
-                                    {{ arqueo.cashRegister }}</td>
-                                <td
-                                    *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>
-                                    {{ arqueo.estimatedAmount | currency:'USD':code:'2.2-2' }}</td>
-                                <td
-                                    *ngIf="(arqueo.closedAt === undefined) && (i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)">
-                                </td>
-                                <td
-                                    *ngIf="(arqueo.closedAt !== undefined) && (i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)">{{ arqueo.realAmountTotal |
+  <div class="col-md-8 col-lg-8 col-sm-8 pr-0 pl-0 mr-0 pr-0 customTitleBar">
+    <div class="pageTitle">
+      <div style="float: left">
+        <header class="major">
+          <h5>{{pageTitle}}</h5>
+        </header>
+      </div>
+      <div style="float: right">
+        <a [routerLink]="['/sales/cash-counts', { outlets: { edit: ['newCashCount'] } }]" mdbBtn role="button"
+          rounded="true" size="sm" mdbWavesEffect [class.btn-primary-custom]="true" [class.customButton]="true"
+          mdbRippleRadius *ngIf='enableNew'>
+          + Nuevo Arqueo
+        </a>
+      </div>
+    </div>
+    <div class="row pl-0 pr-0 ml-0 mr-0 pt-0 heightThree">
+      <div class="col-md-12 col-lg-12 col-sm-12 pl-5 pr-5 pt-4 pb-2 mt-2 text-center">
+        <div class="row">
+          <table class="table table-bordered table-hover customTable" mdbTable #tableEl="mdbTable">
+            <thead class="primary-color customTableText">
+              <tr>
+                <th>Hora Apertura</th>
+                <th>Hora Cierre</th>
+                <th>Caja</th>
+                <th>Estimado</th>
+                <th>Real</th>
+                <th>Diferencia</th>
+                <th *ngIf='enableActionButtons'>Acciones</th>
+              </tr>
+            </thead>
+            <tbody class="table-wrapper" *ngIf='filteredArqueos && filteredArqueos.length'>
+              <tr *ngFor='let arqueo of filteredArqueos; let i = index'>
+                <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>
+                  {{ arqueo.createdAt | date:'dd/MM/yy HH:mm' }}</td>
+                <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>
+                  {{ arqueo.closedAt | date:'dd/MM/yy HH:mm' }}</td>
+                <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>
+                  {{ arqueo.cashRegister }}</td>
+                <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>
+                  {{ arqueo.estimatedAmount | currency:'USD':code:'2.2-2' }}</td>
+                <td
+                  *ngIf="(arqueo.closedAt === undefined) && (i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)">
+                </td>
+                <td
+                  *ngIf="(arqueo.closedAt !== undefined) && (i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)">{{ arqueo.realAmountTotal |
                                     currency:'USD':code:'2.2-2' }}</td>
-                                <td
-                                    *ngIf="(arqueo.closedAt === undefined) && (i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)">
-                                </td>
-                                <td
-                                    *ngIf="(arqueo.closedAt !== undefined) && (i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)">{{ arqueo.realAmountTotal -
+                <td
+                  *ngIf="(arqueo.closedAt === undefined) && (i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)">
+                </td>
+                <td
+                  *ngIf="(arqueo.closedAt !== undefined) && (i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)">{{ arqueo.realAmountTotal -
                                     arqueo.estimatedAmount | currency:'USD':code:'2.2-2' }}</td>
-                                <td class="align-middle"
-                                    *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex) && enableActionButtons'>
-                                    <a [routerLink]="['/sales/cash-counts', { outlets: { edit: ['editCashCount', arqueo._id] } }]"
-                                        *ngIf='enableEdit'><img src="assets/img/editar.png" height="40px" width="auto"></a>
-                                    <a (click)="showModalDelete(deleteTemplate, arqueo._id)"
-                                        *ngIf='enableDelete'><img src="assets/img/eliminar.png" height="40px" width="auto"></a>
-                                </td>
-                            </tr>
-                        </tbody>
-                        <tfoot class="grey lighten-5 w-100">
-                            <tr>
-                                <td colspan="7">
-                                    <mdb-table-pagination [tableEl]="tableEl" [searchDataSource]="filteredArqueos">
-                                    </mdb-table-pagination>
-                                </td>
-                            </tr>
-                        </tfoot>
-                    </table>
-                </div>
-            </div>
+                <td class="align-middle"
+                  *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex) && enableActionButtons'>
+                  <a [routerLink]="['/sales/cash-counts', { outlets: { edit: ['editCashCount', arqueo._id] } }]"
+                    *ngIf='enableEdit'><img src="assets/img/editar.png" height="40px" width="auto"></a>
+                  <a (click)="showModalDelete(deleteTemplate, arqueo._id)" *ngIf='enableDelete'><img
+                      src="assets/img/eliminar.png" height="40px" width="auto"></a>
+                </td>
+              </tr>
+            </tbody>
+            <tfoot class="grey lighten-5 w-100">
+              <tr>
+                <td colspan="7">
+                  <mdb-table-pagination [tableEl]="tableEl" [searchDataSource]="filteredArqueos">
+                  </mdb-table-pagination>
+                </td>
+              </tr>
+            </tfoot>
+          </table>
         </div>
+      </div>
     </div>
-    <div class="col-md-4 col-lg-4 col-sm-4 mr-0 pr-0 pl-0 pb-0 mt-0 pt-0 outletGeneric">
-        <router-outlet name="edit" (deactivate)='reloadItems($event)'></router-outlet>
-    </div>
+  </div>
+  <div class="col-md-4 col-lg-4 col-sm-4 mr-0 pr-0 pl-0 pb-0 mt-0 pt-0 outletGeneric">
+    <router-outlet name="edit" (deactivate)='reloadItems($event)'></router-outlet>
+  </div>
 </div>
