--- a/src/app/daily-menu/daily-menu-list/daily-menu-list.component.html
+++ b/src/app/daily-menu/daily-menu-list/daily-menu-list.component.html
@@ -1,63 +1,72 @@
 <ng-template #deleteTemplate>
   <app-delete-template [modalTitle]="modalDeleteTitle" [modalMessage]="modalDeleteMessage" (delete)="deleteProduct()"
-      (close)="closeModal()">
+    (close)="closeModal()">
   </app-delete-template>
 </ng-template>
 
 <ng-template #errorTemplate>
-<app-error-template [errorTitle]="modalErrorTittle" [errorMessage]="modalErrorMessage" (close)="closeModal()">
-</app-error-template>
+  <app-error-template [errorTitle]="modalErrorTittle" [errorMessage]="modalErrorMessage" (close)="closeModal()">
+  </app-error-template>
 </ng-template>
 
 <div class="pageTitle">
   <div class="float-left">
-      <header>
-          <h5> {{ pageTitle }}</h5>
-      </header>
+    <header>
+      <h5> {{ pageTitle }}</h5>
+    </header>
   </div>
   <div style="float: right">
-      <a [routerLink]="['newDailyMenu']" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.btn-primary-custom]="true" [class.customButton]="true" mdbRippleRadius> + Nuevo Menu del Dia</a>
+    <a [routerLink]="['newDailyMenu']" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect
+      [class.btn-primary-custom]="true" [class.customButton]="true" mdbRippleRadius> 
+      + Nuevo Menu del Dia
+    </a>
   </div>
 </div>
-          
+
 <div class="ml-5 mr-5 pl-5 pr-5 pt-1 pb-2 mt-2 text-center">
-  <div class="row mb-2 card pl-2 pr-2 pb-1 pt-1">
-      <form #form="ngForm" novalidate class="form-inline">
-          <h6 class="pt-2">Filtrar:</h6>
-          <div class="md-form form-group mr-0 ml-0 col-md-2 col-lg-2">
-              <input type="text" class="input-alternate" placeholder="Nombre"  name="query" [(ngModel)]='listFilter' id="query" >
-          </div>
-      </form>    
+  <div class="row mb-2 pl-2 pr-2 pb-1 pt-1 customBox">
+    <form #form="ngForm" novalidate class="form-inline">
+      <h6 class="pt-2">Filtrar:</h6>
+      <div class="md-form form-group mr-0 ml-0 col-md-2 col-lg-2">
+        <input type="text" class="input-alternate" placeholder="Nombre" name="query" [(ngModel)]='listFilter'
+          id="query">
+      </div>
+    </form>
   </div>
 
   <div class="row">
-      <table class="table table-bordered table-hover customTable" mdbTable #tableEl="mdbTable">
-          <thead class="primary-color customTableText">
-              <tr>
-                  <th>Nombre</th>
-                  <th>Precio</th>                                     
-                  <th>Disponible</th>
-                  <th>Acciones</th>
-              </tr>
-          </thead>
-          <tbody class="table-wrapper" *ngIf='dailyMenus && dailyMenus.length'>
-              <tr *ngFor = 'let dailyMenu of filteredDailyMenus; let i = index' >
-                  <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)' class="align-middle customLongTh">{{ dailyMenu.name }}</td>
-                  <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)' class="align-middle customShortTh">{{ dailyMenu.price | currency:'USD':code:'2.2-2' }}</td>
-                  <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)' class="align-middle customShortTh">{{ dailyMenu.startDate <= today && today <= dailyMenu.endDate | dailyMenuAvailable }}</td>
-                  <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)' class="customThTd align-middle">
-                      <a [routerLink]="['edit', dailyMenu._id]"><img src="assets/img/editar.png" height="40px" width="auto"></a>
-                      <a (click) = "updateDates(dailyMenu)" class="btn btn-red btn-sm">Activar/Desactivar</a>
-                  </td>
-              </tr>
-          </tbody>
-          <tfoot class="grey lighten-5 w-100">
-              <tr>
-                  <td colspan="4">
-                      <mdb-table-pagination [tableEl]="tableEl" [searchDataSource]="filteredDailyMenus"></mdb-table-pagination>
-                  </td> 
-              </tr>
-          </tfoot>
-      </table>
+    <table class="table table-bordered table-hover customTable" mdbTable #tableEl="mdbTable">
+      <thead class="primary-color customTableText">
+        <tr>
+          <th>Nombre</th>
+          <th>Precio</th>
+          <th>Disponible</th>
+          <th>Acciones</th>
+        </tr>
+      </thead>
+      <tbody class="table-wrapper" *ngIf='dailyMenus && dailyMenus.length'>
+        <tr *ngFor='let dailyMenu of filteredDailyMenus; let i = index'>
+          <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'
+            class="align-middle customLongTh">{{ dailyMenu.name }}</td>
+          <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'
+            class="align-middle customShortTh">{{ dailyMenu.price | currency:'USD':code:'2.2-2' }}</td>
+          <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'
+            class="align-middle customShortTh">
+            {{ dailyMenu.startDate <= today && today <= dailyMenu.endDate | dailyMenuAvailable }}</td>
+          <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'
+            class="customThTd align-middle">
+            <a [routerLink]="['edit', dailyMenu._id]"><img src="assets/img/editar.png" height="40px" width="auto"></a>
+            <a (click)="updateDates(dailyMenu)" class="btn btn-red btn-sm">Activar/Desactivar</a>
+          </td>
+        </tr>
+      </tbody>
+      <tfoot class="grey lighten-5 w-100">
+        <tr>
+          <td colspan="4">
+            <mdb-table-pagination [tableEl]="tableEl" [searchDataSource]="filteredDailyMenus"></mdb-table-pagination>
+          </td>
+        </tr>
+      </tfoot>
+    </table>
   </div>
 </div>
