--- a/src/app/general-settings/general-settings.component.html
+++ b/src/app/general-settings/general-settings.component.html
@@ -1,32 +1,32 @@
 <div class="row pr-0 mr-0 pl-0 ml-0">
-    <div class="container-fluid col-md-2 col-lg-2 mr-0 ml-0 pr-0 pl-0">
+  <div class="container-fluid col-md-2 col-lg-2 mr-0 ml-0 pr-0 pl-0">
 
-        <!-- SideNav slide-out button -->
-        <a (click)="sidenav.toggle()" class="btn btn-primary p-3 button-collapse"><i class="fa fa-bars"></i></a>
-        <!--/. SideNav slide-out button -->
+    <!-- SideNav slide-out button -->
+    <a (click)="sidenav.toggle()" class="btn btn-primary p-3 button-collapse"><i class="fa fa-bars"></i></a>
+    <!--/. SideNav slide-out button -->
 
-        <!-- Sidebar navigation -->
-        <mdb-sidenav #sidenav class="fixed customSideNav pr-2 pl-2 pt-2 stylish-color" [fixed]="true">
-            <li>
-                <ul class="collapsible collapsible-accordion">
-                    <mdb-squeezebox [multiple]="false" aria-multiselectable="false">
-                        <div *ngFor='let appMenu of appMenus' class="customItem mt-2 mb-2">                          
-                            <mdb-item class="no-collase">
-                                <mdb-item-head mdbRippleRadius class="mb-1"><a
-                                        [routerLink]="[appMenu._id, { outlets: { edit: ['selectItem'] } }]"
-                                        class="nav-link customLink"><i class="fa fa-hand-pointer-o"></i>{{ 'AppMenus.' + appMenu._id | translate }}</a></mdb-item-head>
-                                <mdb-item-body></mdb-item-body>
-                            </mdb-item>
-                        </div>
-                    </mdb-squeezebox>
-                </ul>
-            </li>
-            <!--/. Side navigation links -->
-        </mdb-sidenav>
-        <!--/. Sidebar navigation -->
+    <!-- Sidebar navigation -->
+    <mdb-sidenav #sidenav class="fixed customSideNav pr-2 pl-2 pt-2 stylish-color" [fixed]="true">
+      <li>
+        <ul class="collapsible collapsible-accordion">
+          <mdb-squeezebox [multiple]="false" aria-multiselectable="false">
+            <div *ngFor='let appMenu of appMenus' class="customItem mt-2 mb-2">
+              <mdb-item class="no-collase">
+                <mdb-item-head mdbRippleRadius class="mb-1"><a
+                    [routerLink]="[appMenu._id, { outlets: { edit: ['selectItem'] } }]" class="nav-link customLink"><i
+                      class="fa fa-hand-pointer-o"></i>{{ 'AppMenus.' + appMenu._id | translate }}</a></mdb-item-head>
+                <mdb-item-body></mdb-item-body>
+              </mdb-item>
+            </div>
+          </mdb-squeezebox>
+        </ul>
+      </li>
+      <!--/. Side navigation links -->
+    </mdb-sidenav>
+    <!--/. Sidebar navigation -->
 
-    </div>
-    <div class="col-md-10 col-lg-10 mr-0 pr-0 pl-0 pb-0 mt-0 pt-0">
-        <router-outlet></router-outlet>
-    </div>
+  </div>
+  <div class="col-md-10 col-lg-10 mr-0 pr-0 pl-0 pb-0 mt-0 pt-0">
+    <router-outlet></router-outlet>
+  </div>
 </div>
