--- a/src/app/order/order-list/order-list.component.html
+++ b/src/app/order/order-list/order-list.component.html
@@ -11,10 +11,12 @@
 
 <div class="row pl-0 pr-0 ml-0 mr-0">
   <div class="col-md-8 col-lg-8 col-sm-8 pr-0 pl-0 mr-0 pr-0 customTitleBar">
-    <div class="row pr-0 ml-0 mr-0 pageTitle">
-      <header class="major">
-        <h5 class="customTitle">{{ pageTitle }}</h5>
-      </header>
+    <div class="pageTitle">
+      <div style="float: left">
+        <header class="major">
+          <h5>{{pageTitle}}</h5>
+        </header>
+      </div>
     </div>
     <div class="row pl-0 pr-0 ml-0 mr-0 pt-0 heightThree">
       <div class="col-md-12 col-lg-12 col-sm-12 pl-5 pr-5 pt-4 pb-2 mt-2 text-center">
@@ -110,9 +112,10 @@
                 <td class="align-middle"
                   *ngIf="i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex && enableActionButtons">
                   <a [routerLink]="['/sales/sales-list', { outlets: { edit: ['orderDetail', order._id] } }]"
-                    class="btn btn-yellow btn-sm customButtonText"
-                    *ngIf='enableEdit'>Detalle</a>
-                  <a *ngIf="order.status !== 'Deleted' && enableDelete" (click)="showModalDelete(deleteTemplate, order._id)"><img src="assets/img/eliminar.png" height="40px" width="auto"></a>
+                    *ngIf='enableEdit'><img src="assets/img/detalle.png" height="40px" width="auto"></a>
+                  <a *ngIf="order.status !== 'Deleted' && enableDelete"
+                    (click)="showModalDelete(deleteTemplate, order._id)"><img src="assets/img/eliminar.png"
+                      height="40px" width="auto"></a>
                 </td>
               </tr>
             </tbody>
