--- a/src/app/product/product-list/product-list.component.html
+++ b/src/app/product/product-list/product-list.component.html
@@ -1,101 +1,104 @@
 <ng-template #deleteTemplate>
-    <app-delete-template [modalTitle]="modalDeleteTitle" [modalMessage]="modalDeleteMessage" (delete)="deleteProduct()"
-        (close)="closeModal()">
-    </app-delete-template>
+  <app-delete-template [modalTitle]="modalDeleteTitle" [modalMessage]="modalDeleteMessage" (delete)="deleteProduct()"
+    (close)="closeModal()">
+  </app-delete-template>
 </ng-template>
 
 <ng-template #errorTemplate>
-    <app-error-template [errorTitle]="modalErrorTittle" [errorMessage]="modalErrorMessage" (close)="closeModal()">
-    </app-error-template>
+  <app-error-template [errorTitle]="modalErrorTittle" [errorMessage]="modalErrorMessage" (close)="closeModal()">
+  </app-error-template>
 </ng-template>
 
 <div class="pageTitle">
-    <div class="float-left">
-        <header>
-            <h5> {{ pageTitle }}</h5>
-        </header>
-    </div>
-    <div style="float: right">
-        <a [routerLink]="['newProduct']" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.btn-primary-custom]="true" [class.customButton]="true" mdbRippleRadius
-            *ngIf='enableNew'> + Nuevo Producto</a>
-    </div>
+  <div class="float-left">
+    <header>
+      <h5> {{ pageTitle }}</h5>
+    </header>
+  </div>
+  <div style="float: right">
+    <a [routerLink]="['newProduct']" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect
+      [class.btn-primary-custom]="true" [class.customButton]="true" mdbRippleRadius *ngIf='enableNew'>
+      + Nuevo Producto
+    </a>
+  </div>
 </div>
 
 <div class="ml-5 mr-5 pl-5 pr-5 pt-1 pb-2 mt-2 text-center">
-    <div class="row mb-2 card pl-2 pr-2 pb-1 pt-1">
-        <form #form="ngForm" novalidate class="form-inline">
-            <h6 class="pt-2">Filtrar:</h6>
-            <div class="md-form form-group mr-0 pr-0 col-lg-1 col-md-1">
-                <input type="text" class="input-alternate" placeholder="Codigo" name="queryCod"
-                    [(ngModel)]='listFilterCod' id="queryCod">
-            </div>
-            <div class="md-form form-group mr-0 ml-0 col-md-2 col-lg-2">
-                <input type="text" class="input-alternate" placeholder="Nombre" name="query" [(ngModel)]='listFilter'
-                    id="query">
-            </div>
-            <h6 class="pt-2 ml-2">Categoria:</h6>
-            <div class="md-form form-group mr-2 col-md-2 col-lg-2 text-left">
-                <mdb-select #queryCategory name="queryCategory" (selected)="filterByCategoria(queryCategory.value)"
-                    id="queryCategory" [options]="categoriesOptions" [(ngModel)]="selectedValue"
-                    placeholder="Choose your option" class="colorful-select dropdown-primary"></mdb-select>
-            </div>
-            <h6 class="pt-2 ml-2 customH6">Actualizar Precios:</h6>
-            <div class="ml-1 col-md-2 mr-0 md-form form-group">
-                <input class="input-alternate" placeholder="Ingrese porcentaje" [(ngModel)]="percentage" required
-                    type="number" name="percentage" id="percentage">
-            </div>
-            <div class="md-form form-group customMdForm">
-                <button class="btn btn-sm btn-success customCheckButton float-right"
-                    [disabled]='form.invalid || percentage === 0' (click)='updatePrice()'><i
-                        class="fa fa-check"></i></button>
-            </div>
-        </form>
-    </div>
+  <div class="row mb-2 pl-2 pr-2 pb-1 pt-1 customBox">
+    <form #form="ngForm" novalidate class="form-inline">
+      <h6 class="pt-2">Filtrar:</h6>
+      <div class="md-form form-group mr-0 pr-0 col-lg-1 col-md-1">
+        <input type="text" class="input-alternate" placeholder="Codigo" name="queryCod" [(ngModel)]='listFilterCod'
+          id="queryCod">
+      </div>
+      <div class="md-form form-group mr-0 ml-0 col-md-2 col-lg-2">
+        <input type="text" class="input-alternate" placeholder="Nombre" name="query" [(ngModel)]='listFilter'
+          id="query">
+      </div>
+      <h6 class="pt-2 ml-2">Categoria:</h6>
+      <div class="md-form form-group mr-2 col-md-2 col-lg-2 text-left">
+        <mdb-select #queryCategory name="queryCategory" (selected)="filterByCategoria(queryCategory.value)"
+          id="queryCategory" [options]="categoriesOptions" [(ngModel)]="selectedValue" placeholder="Choose your option"
+          class="colorful-select dropdown-primary"></mdb-select>
+      </div>
+      <h6 class="pt-2 ml-2">Actualizar Precios:</h6>
+      <div class="ml-1 col-md-2 mr-0 md-form form-group">
+        <div class="row">
+          <input class="input-alternate" placeholder="Ingrese porcentaje" [(ngModel)]="percentage" required
+            type="number" name="percentage" id="percentage">
+          <button class="btn btn-sm btn-success customCheckButton float-right"
+            [disabled]='form.invalid || percentage === 0' (click)='updatePrice()'><i class="fa fa-check"></i></button>
+        </div>
+      </div>
 
-    <div class="row">
-        <table class="table table-bordered table-hover customTable" mdbTable #tableEl="mdbTable">
-            <thead class="primary-color customTableText">
-                <tr>
-                    <th class="customShortTh">Código</th>
-                    <th class="customLongTh">Nombre</th>
-                    <th class="customShortTh">Precio</th>
-                    <th>Categoría</th>
-                    <th>Carta</th>
-                    <th class="customShortTh">Disponible</th>
-                    <th class="customThTd" *ngIf='enableActionButtons'>Acciones</th>
-                </tr>
-            </thead>
-            <tbody class="table-wrapper" *ngIf='products && products.length'>
-                <tr *ngFor='let product of filteredProducts; let i = index'>
-                    <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'
-                        class="align-middle customShortTh">{{ product.code }}</td>
-                    <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'
-                        class="align-middle customLongTh">{{ product.name }}</td>
-                    <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'
-                        class="align-middle customShortTh">{{ product.price | currency:'USD':code:'2.2-2' }}</td>
-                    <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'
-                        class="align-middle">{{ product.category.name }}</td>
-                    <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'
-                        class="align-middle">{{ product.category.menu.name }}</td>
-                    <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'
-                        class="align-middle customShortTh">{{ product.availableDescription }}</td>
-                    <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex) && enableActionButtons'
-                        class="customThTd align-middle">
-                        <a [routerLink]="['edit', product._id]"
-                            *ngIf='enableEdit'><img src="assets/img/editar.png" height="40px" width="auto"></a>
-                        <a (click)="showModalDelete(deleteTemplate, noDeleteTemplate, product._id)"
-                            *ngIf='enableDelete'><img src="assets/img/eliminar.png" height="40px" width="auto"></a>
-                    </td>
-                </tr>
-            </tbody>
-            <tfoot class="grey lighten-5 w-100">
-                <tr>
-                    <td colspan="7">
-                        <mdb-table-pagination [tableEl]="tableEl" [searchDataSource]="filteredProducts">
-                        </mdb-table-pagination>
-                    </td>
-                </tr>
-            </tfoot>
-        </table>
-    </div>
+    </form>
+  </div>
+
+  <div class="row">
+    <table class="table table-bordered table-hover customTable" mdbTable #tableEl="mdbTable">
+      <thead class="primary-color customTableText">
+        <tr>
+          <th class="customShortTh">Código</th>
+          <th class="customLongTh">Nombre</th>
+          <th class="customShortTh">Precio</th>
+          <th>Categoría</th>
+          <th>Carta</th>
+          <th class="customShortTh">Disponible</th>
+          <th class="customThTd" *ngIf='enableActionButtons'>Acciones</th>
+        </tr>
+      </thead>
+      <tbody class="table-wrapper" *ngIf='products && products.length'>
+        <tr *ngFor='let product of filteredProducts; let i = index'>
+          <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'
+            class="align-middle customShortTh">{{ product.code }}</td>
+          <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'
+            class="align-middle customLongTh">{{ product.name }}</td>
+          <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'
+            class="align-middle customShortTh">{{ product.price | currency:'USD':code:'2.2-2' }}</td>
+          <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'
+            class="align-middle">{{ product.category.name }}</td>
+          <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'
+            class="align-middle">{{ product.category.menu.name }}</td>
+          <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'
+            class="align-middle customShortTh">{{ product.availableDescription }}</td>
+          <td
+            *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex) && enableActionButtons'
+            class="customThTd align-middle">
+            <a [routerLink]="['edit', product._id]" *ngIf='enableEdit'><img src="assets/img/editar.png" height="40px"
+                width="auto"></a>
+            <a (click)="showModalDelete(deleteTemplate, noDeleteTemplate, product._id)" *ngIf='enableDelete'><img
+                src="assets/img/eliminar.png" height="40px" width="auto"></a>
+          </td>
+        </tr>
+      </tbody>
+      <tfoot class="grey lighten-5 w-100">
+        <tr>
+          <td colspan="7">
+            <mdb-table-pagination [tableEl]="tableEl" [searchDataSource]="filteredProducts">
+            </mdb-table-pagination>
+          </td>
+        </tr>
+      </tfoot>
+    </table>
+  </div>
 </div>
