--- a/src/app/product/product-new/product-new.component.css
+++ b/src/app/product/product-new/product-new.component.css
@@ -17,12 +17,17 @@ margin-bottom:10px;
 border-color:#bd290c;
 }
 
-#cancel{
-background-color:transparent;
-color:#bd290c;
-border-radius:30px;
-padding:10px;
-margin-bottom:10px;
-border-color:#bd290c;
-border:2px solid;
+.chkAvailable {
+  padding-top: 2.2rem;
+  margin-left: 1.5rem;
+}
+
+.customTextArea {
+  width: 42rem;
+  height: 5rem;
+}
+
+ul li{
+  display:inline-block;
+  padding:10px;
 }
