--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,10 +32,6 @@ background-color:#bd290c !important;
 	background-color:#932204;
 }
 
-.classic-tabs li a.active {
-  
-}
-
 .classic-tabs li a {
     display: block;
     padding: 20px 24px;
@@ -95,11 +91,10 @@ background-color:#bd290c !important;
 
 .pageTitle{
     background-color: #c7cbaf;
-    height: 50px;
+    height: 3.2rem;
     padding: 0.2rem;
     padding-left:1rem;
-	padding-top:10px;
-	font-size:15px;
+	  font-size:15px;
     color: #424242;
 }
 
@@ -113,7 +108,7 @@ background-color:#bd290c !important;
 }
 
 .pageTitle h5{
-    padding-top: 0.3rem;
+    padding-top: 0.5rem;
 }
 
 .customContentCard{
@@ -176,9 +171,6 @@ table {
     margin-top: 0px!important;
     margin-bottom: 0px!important;
 }
-.customH6{
-    margin-left: 14rem!important;
-}
 
 .customMdForm{
     margin-right:0px!important;
@@ -189,6 +181,13 @@ table {
     border-radius: 5rem;
     padding-left:.5rem;
     padding-right:.5rem; 
+}
+
+.customInput {
+  border: 1px solid #718239;
+  border-radius:20px;
+  background-color:transparent;
+  color:#555;
 }
 
 .customDate{
@@ -366,7 +365,7 @@ width: 100%!important;
 
 .outletTitle{
     background-color: rgb(113, 130, 57);
-    height: 20%;
+    height: 3.2rem;
     color: white;
     padding-top: 10px;
     padding-left: .75rem;
@@ -492,4 +491,26 @@ nav ul{
 
 .mdb-select-toggle{
 color:red;
+}
+
+.boton-cancelar {
+border:2px solid #bd290c!important;
+background-color:transparent!important;
+color:#bd290c!important;
+border:2px solid;
+border-radius:30px;
+}
+
+.container {
+  margin-top: 50px;	
+}
+ 
+.major {
+  text-align:left;
+  color:#424242;
+}
+
+.customImg {
+  width: 400px; 
+  height: 400px;
 }
